# aind-codeocean-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lint_and_test.yml  tag_and_publish.yml
doc_template/source/: aind_codeocean_api.rst  conf.py  modules.rst
integration/: .env.template  run_tests.py
src/: codeocean_api.py  credentials.py
src/aind_codeocean_api/: __init__.py  codeocean.py  credentials.py  credentials_in_aws.py
src/aind_codeocean_api/models/: __init__.py  basic_request.py  computations_requests.py  data_assets_requests.py
src/code_ocean_api/: __init__.py  code_ocean_api.py
tests/: test_codeocean_requests.py  test_credentials.py  test_credentials_in_aws.py
tests/resources/: fake_credentials.json
